fix: heights on mobile, header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
-  padding-top: 35px;
-  padding-bottom: 35px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
   &::after {
     content: "";
