--- a/src/components/TransactionHistory/TransactionHistory.module.scss
+++ b/src/components/TransactionHistory/TransactionHistory.module.scss
@@ -16,7 +16,7 @@
 .list {
   padding-top: 16px;
   margin-top: 16px;
-  max-height: calc(100vh - 80px - 336px);
+  max-height: calc(100svh - 80px - 296px);
   overflow-y: scroll;
 
   &::-webkit-scrollbar {
